Make the invisible button fixed to the save button
[#172649479]

--- a/src/components/video/buttons/videoCollection/ManageVideoCollectionMenuContainer.less
+++ b/src/components/video/buttons/videoCollection/ManageVideoCollectionMenuContainer.less
@@ -1,7 +1,3 @@
 .invisibleButton {
   visibility: hidden;
-  position: absolute;
-  position: absolute;
-  bottom: 240px;
-  left: 560px;
 }
